# trip-booking-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  render.yaml
agent/: budget.py  intent.py  loop.py  orchestrator.py  state.py  tools_schema.py
agent/prompts/: system.md
api/: auth.py  config.py  main.py  schemas.py
approval/: anomaly.py  gate.py  oob.py  revalidator.py  tokens.py  webauthn.py
audit/: __init__.py  archive.py  log.py  schema.sql  verify.py
booking/: compensator.py  states.py  two_phase.py
booking/providers/: base.py  mock_always.py  mock_flaky.py  stripe_test.py
cli/: trip.py
memory/: profile.py
reviews/: injection_guard.py  semantic.py
scripts/: attack_demo.sh  demo.sh
tests/: conftest.py  test_amadeus_mapping.py  test_anomaly.py  test_approval_gate.py  test_archive.py  test_audit_chain.py  test_budget.py  test_duffel_mapping.py  test_injection_guard.py  test_intent.py  test_liteapi_mapping.py  test_m3_compensation.py  test_multi_leg.py  test_openweather.py  test_phase1_critical.py  test_provenance.py  test_ranking.py  test_semantic_reviews.py  test_two_phase_commit.py  test_webauthn.py
tests/fitness/: test_no_untokened_booking.py
tools/flights/: amadeus.py  base.py  duffel.py  mock.py
tools/hotels/: amadeus.py  base.py  duffel.py  liteapi.py  mock.py
tools/reviews/: gstack_scraper.py
tools/weather/: mock.py  openweather.py
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  (+1 more)
(+6 files in other folders)
